[tool.poetry]
name = "pylitmus"
version = "0.1.0"
authors = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Experimental python implementation of litmus - temporary so as to test light client mechanics."
keywords = ["Casper Network", "Blockchain", "Python"]
license = "Apache-2.0"
maintainers = ["Mark A. Greenslade <asladeofgreen@gmail.com>"]
homepage = "https://github.com/cspr-rad/litmus-py"
readme = "README.md"
repository = "https://github.com/cspr-rad/litmus-py"

[tool.poetry.dependencies]
python = "^3.12"
fakeredis = "^2.22.0"
redis = "^5.0.4"
dramatiq = {version = "^1.17.0", extras = ["=redis", "=watch"]}
tornado = "^6.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
